--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
     <section class="about">
         <div class="portrait">
-            <img src="portrait.jpg" alt="Alexis Price Portrait">
+            <img src="images/portrait2.png" alt="Alexis Price Portrait">
         </div>
         <p>Alexis Price is a woman of many talents. Her current role as an energetic and creative teacher at an alternative high school, allows her to help students navigate English language challenges and inspire their learning. Her background as an ESL/ENL specialist and department head have opened the door for her to serve a multitude of students and lead her team effectively. Driven by a passion for growth and community impact, she envisions a future of stepping into an administrative role down the line, specifically that of an assistant principal. In addition to her career aspirations, Alexis dreams of achieving a doctorate degree. “Call me Dr. Price,” she jokes.</p>
             
