--- a/hobbies.html
+++ b/hobbies.html
@@ -28,15 +28,15 @@
 
     <section class="hobbies">
         <div class="hobby">
-            <img src="hobby1.jpg" alt="Baking">
+            <img src="images/hobby1.jpg" alt="Baking">
             <p>Baking</p>
         </div>
         <div class="hobby">
-            <img src="hobby2.jpg" alt="Crafting">
+            <img src="images/hobby2.jpg" alt="Crafting">
             <p>Crafting</p>
         </div>
         <div class="hobby">
-            <img src="hobby3.jpg" alt="Long Walks">
+            <img src="images/hobby3.jpg" alt="Long Walks">
             <p>Long Walks</p>
         </div>
     </section>
