--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section class="landing">
         <div class="hero-image">
-            <img src="portrait.jpg" alt="Alexis Price Portrait">
+            <img src="images/portrait1.png" alt="Alexis Price Portrait">
         </div>
         <p class="intro-text">A glimpse into Alexis Price's life, passions, and accomplishments.</p>
         <a href="about.html" class="btn">Learn More About Alexis Price</a>
