--- a/hobbies.html
+++ b/hobbies.html
@@ -1,6 +1,6 @@
 <!-- hobbies.html - Hobbies Page -->
 
-<!-- 11/09/24-10/24/24 -->
+<!-- 12/07/24 -->
 <!-- Ian Lewis -->
 <!-- CSD 340 -->
 <!-- bioSite -->
@@ -28,16 +28,22 @@
 
     <section class="hobbies">
         <div class="hobby">
-            <img src="images/hobby1.jpg" alt="Baking">
-            <p>Baking</p>
+            <a href="https://en.wikipedia.org/wiki/Baking" target="_blank">
+                <img src="images/hobby1.jpg" alt="Baking">
+            </a>
+            <p><a href="https://en.wikipedia.org/wiki/Baking" target="_blank">Baking</a></p>
         </div>
         <div class="hobby">
-            <img src="images/hobby2.jpg" alt="Crafting">
-            <p>Crafting</p>
+            <a href="https://en.wikipedia.org/wiki/Craft" target="_blank">
+                <img src="images/hobby2.jpg" alt="Crafting">
+            </a>
+            <p><a href="https://en.wikipedia.org/wiki/Craft" target="_blank">Crafting</a></p>
         </div>
         <div class="hobby">
-            <img src="images/hobby3.jpg" alt="Long Walks">
-            <p>Long Walks</p>
+            <a href="https://en.wikipedia.org/wiki/Walking" target="_blank">
+                <img src="images/hobby3.jpg" alt="Long Walks">
+            </a>
+            <p><a href="https://en.wikipedia.org/wiki/Walking" target="_blank">Long Walks</a></p>
         </div>
     </section>
 
